--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -1,5 +1,5 @@
-{{> header}}
-<div class="container">
+{{> header title="File Format Converter"}}
+<div class="">
     <nav class="navbar navbar-expand-lg text-white bg-transparent border-bottom">
         <div class="container-fluid mx-5 text-white">
             <a class="navbar-brand logo fs-4" href="/">FileFormatConverter</a>
@@ -26,21 +26,21 @@
         </div>
     </nav>
 
-
-
-<form class="row g-3 container position-absolute top-50 start-50 translate-middle form-floating mb-3 w-50" action="/login" method="post">
-  <div class="col-md-12">
-    <label for="inputEmail4" class=" fs-5 tokenLable">Username:</label>
-    <input type="text" class="form-control fs-3 p-2 tokenInput" name="username" id="inputEmail4">
-  </div>
-  <div class="col-md-12">
-    <label for="inputPassword4" class="fs-5  tokenLable">Password</label>
-    <input type="password" class="form-control p-2 fs-3  tokenInput" name="password" id="inputPassword4">
-  </div>
-  <div class="col-12">
-    <button type="submit" class="start-btn btn-lg py-3">Log In</button>
-  </div>
+<form action="/login" method="post"
+    class="container position-absolute top-50 start-50 translate-middle form-floating mb-3">
+    <div class="mb-3 container w-75">
+        <label for="formGroupExampleInput" class="form-label fs-5 tokenLable">Username: </label>
+        <input type="text" name="username" class="form-control p-2 fs-3 tokenInput" id="formGroupExampleInput"
+            placeholder="Username">
+        <label for="formGroupExampleInput" class="form-label mt-3 fs-5 tokenLable">Password: </label>
+        <input type="text" name="password" class="form-control p-2 fs-3 tokenInput mb-2" id="formGroupExampleInput"
+            placeholder="Password">
+        <pre class="text-danger fs-5 py-1">{{msg}}</pre>
+        <pre class="text-danger fs-5 py-1">{{msgs}}</pre>
+    </div>
+    <button type="submit" class="btn btn-primary py-3 text-center start-btn">Log In</button>
 </form>
-</div>
+
+
 
 {{> foot}}
