--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -1,7 +1,7 @@
-{{> header}}
+{{> header title="Register"}}
     <nav class="navbar navbar-expand-lg text-white bg-transparent border-bottom">
         <div class="container-fluid mx-5 text-white">
-            <a class="navbar-brand logo fs-4" href="#">Navbar</a>
+            <a class="navbar-brand logo fs-4" href="#">File Format Converter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -11,12 +11,8 @@
                     <li class="nav-item links">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item links">
-                        <a class="nav-link" href="/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item links">
-                        <a class="nav-link " href="/dashboard">Dashboard</a>
-                    </li>
+                    
+                   
                 </ul>
                 <form class="d-flex">
 
@@ -24,10 +20,7 @@
                     <li class="nav-item links">
                         <a class="nav-link active" aria-current="page" href="/login">Log In</a>
                     </li>
-                    <li class="nav-item links">
-                        <a class="nav-link" href="/logout">Log Out</a>
-                    </li>
-                   
+                    
                 </ul>
                 </form>
             </div>
