--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -5,6 +5,7 @@
 			<a class="navbar-brand logo">FileFormatConverter</a>
 			<div class="d-flex links">
 				<a class="nav-link me-4" aria-current="page" href="/logout">Log out</a>
+				<a class="nav-link me-4" aria-current="page" href="/database">Database</a>
 			</div>
 		</div>
 	</nav>
@@ -28,4 +29,6 @@
 </div>
 
 
-{{> foot}}
+                       <script src="javascript/bootstrap.bundle.min.js"></script>
+    </body>
+</html>
