--- a/templates/views/doctopdf.hbs
+++ b/templates/views/doctopdf.hbs
@@ -30,4 +30,6 @@
       </div>
       <!-- ********************************************* -->
 
-{{> foot}}
+                       <script src="javascript/bootstrap.bundle.min.js"></script>
+    </body>
+</html>
