--- a/templates/views/databaselogin.hbs
+++ b/templates/views/databaselogin.hbs
@@ -1,45 +1,38 @@
-{{> header title="File Format Converter"}}
+{{> header title="Database Login"}}
 <div class="">
     <nav class="navbar navbar-expand-lg text-white bg-transparent border-bottom">
         <div class="container-fluid mx-5 text-white">
             <a class="navbar-brand logo fs-4" href="/">FileFormatConverter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon fs-3 text-white">𝌉</span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
-                        
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    
-
                     
                 </ul>
                 <form class="d-flex">
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link" href="/signup">Sign Up</a>                        
-                    </li> 
-                    <li class="nav-item links">
-                       <a class="nav-link" href="/databaselogin" aria-current="page">Show Database Data</a>
-                        
-                    </li>          
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>           
                 </ul>
                 </form>
             </div>
         </div>
     </nav>
 
-<form action="/login" method="post"
+<form action="/databaselogin" method="post"
     class="container position-absolute top-50 start-50 translate-middle form-floating mb-3">
     <div class="mb-3 container w-75">
-        <label for="formGroupExampleInput" class="form-label fs-5 tokenLable">Username: </label>
+        <label for="formGroupExampleInput" class="form-label fs-5 tokenLable">Admin username: </label>
         <input type="text" name="username" class="form-control p-2 fs-3 tokenInput" id="formGroupExampleInput"
             placeholder="Username">
-        <label for="formGroupExampleInput" class="form-label mt-3 fs-5 tokenLable">Password: </label>
+        <label for="formGroupExampleInput" class="form-label mt-3 fs-5 tokenLable">Admin password: </label>
         <input type="password" name="password" class="form-control p-2 fs-3 tokenInput mb-2" id="formGroupExampleInput"
             placeholder="Password">
         <pre class="text-danger fs-5 py-1">{{msg}}</pre>
@@ -47,6 +40,8 @@
     </div>
     <button type="submit" class="btn btn-primary py-3 text-center start-btn">Log In</button>
 </form>
+
+
 
                        <script src="javascript/bootstrap.bundle.min.js"></script>
     </body>
