--- a/templates/views/databaselogin.hbs
+++ b/templates/views/databaselogin.hbs
@@ -1,8 +1,8 @@
 {{> header title="Database Login"}}
 <div class="">
-    <nav class="navbar navbar-expand-lg text-white bg-transparent border-bottom">
+    <nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
         <div class="container-fluid mx-5 text-white">
-            <a class="navbar-brand logo fs-4" href="/">FileFormatConverter</a>
+            <a class="navbar-brand logo fs-4 text-dark" href="/">FileFormatConverter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -12,14 +12,14 @@
                     <li class="nav-item links">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    
+
                 </ul>
                 <form class="d-flex">
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>           
+                        <a class="nav-link text-danger" href="/logout">Logout</a>
+                    </li>
                 </ul>
                 </form>
             </div>
@@ -29,16 +29,16 @@
 <form action="/databaselogin" method="post"
     class="container position-absolute top-50 start-50 translate-middle form-floating mb-3">
     <div class="mb-3 container w-75">
-        <label for="formGroupExampleInput" class="form-label fs-5 tokenLable">Admin username: </label>
-        <input type="text" name="username" class="form-control p-2 fs-3 tokenInput" id="formGroupExampleInput"
+        <label for="formGroupExampleInput" class="form-label fs-4 tokenLable">Admin username: </label>
+        <input type="text" name="username" class="form-control p-2 fs-4 input-btn tokenInput" autocomplete="off"  id="formGroupExampleInput"
             placeholder="Username">
-        <label for="formGroupExampleInput" class="form-label mt-3 fs-5 tokenLable">Admin password: </label>
-        <input type="password" name="password" class="form-control p-2 fs-3 tokenInput mb-2" id="formGroupExampleInput"
+        <label for="formGroupExampleInput" class="form-label mt-3 fs-4 tokenLable">Admin password: </label>
+        <input type="password" name="password" class="form-control p-2 fs-4 input-btn tokenInput mb-2" id="formGroupExampleInput"
             placeholder="Password">
         <pre class="text-danger fs-5 py-1">{{msg}}</pre>
         <pre class="text-danger fs-5 py-1">{{msgs}}</pre>
     </div>
-    <button type="submit" class="btn btn-primary py-3 text-center start-btn">Log In</button>
+    <button type="submit" class="btn btn-primary mt-5 start-btn fs-4 py-3 position-relative w-50 top-50 start-50 translate-middle text-center start-btn">Log In</button>
 </form>
 
 
