--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -1,32 +1,26 @@
 {{> header title="File Format Converter"}}
 <div class="">
-    <nav class="navbar navbar-expand-lg text-white bg-transparent border-bottom">
-        <div class="container-fluid mx-5 text-white">
-            <a class="navbar-brand logo fs-4" href="/">FileFormatConverter</a>
+    <nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
+        <div class="container-fluid mx-5 text-dark">
+            <a class="navbar-brand logo mycol fs-4 text-dark" href="/">FileFormatConverter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon fs-3 text-white">𝌉</span>
+                <span class="navbar-toggler-icon fs-3 text-white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
-                        
+                        <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
                     </li>
-                    
-
-                    
                 </ul>
                 <form class="d-flex">
-
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link" href="/signup">Sign Up</a>                        
-                    </li> 
+                        <a class="nav-link myOrange" href="/signup">Sign Up</a>
+                    </li>
                     <li class="nav-item links">
-                       <a class="nav-link" href="/databaselogin" aria-current="page">Show Database Data</a>
-                        
-                    </li>          
+                       <a class="nav-link text-dark" href="/databaselogin" aria-current="page">Show Database Data</a>
+                    </li>
                 </ul>
                 </form>
             </div>
@@ -36,16 +30,16 @@
 <form action="/login" method="post"
     class="container position-absolute top-50 start-50 translate-middle form-floating mb-3">
     <div class="mb-3 container w-75">
-        <label for="formGroupExampleInput" class="form-label fs-5 tokenLable">Username: </label>
-        <input type="text" name="username" class="form-control p-2 fs-3 tokenInput" id="formGroupExampleInput"
+        <label for="formGroupExampleInput" class="form-label fs-4 tokenLable">Username: </label>
+        <input type="text" name="username" class="form-control p-2 input-btn fs-4 tokenInput" autocomplete="off"  id="formGroupExampleInput"
             placeholder="Username">
-        <label for="formGroupExampleInput" class="form-label mt-3 fs-5 tokenLable">Password: </label>
-        <input type="password" name="password" class="form-control p-2 fs-3 tokenInput mb-2" id="formGroupExampleInput"
+        <label for="formGroupExampleInput" class="form-label  mt-3 fs-4 tokenLable">Password: </label>
+        <input type="password" name="password" class="form-control input-btn p-2 fs-4 tokenInput mb-2" id="formGroupExampleInput"
             placeholder="Password">
         <pre class="text-danger fs-5 py-1">{{msg}}</pre>
         <pre class="text-danger fs-5 py-1">{{msgs}}</pre>
     </div>
-    <button type="submit" class="btn btn-primary py-3 text-center start-btn">Log In</button>
+    <button type="submit" class="btn btn-primary mt-5 py-3 fs-4 position-relative w-50 top-50 start-50 translate-middle text-center start-btn">Log In</button>
 </form>
 
                        <script src="javascript/bootstrap.bundle.min.js"></script>
